executable('echo_server',
           files('echo_server.c'),
           include_directories: global_inc,
           link_with: [basic_lib, event_lib])

executable('echo_client',
           files('echo_client.c'),
           include_directories: global_inc,
           link_with: [basic_lib, event_lib])
